# yak-unshorn

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTES.md  README.md
lib/: bunuel-std.h
module/command/: CMakeLists.txt  command.c  main.c
module/init/: CMakeLists.txt  Makefile  init.c  oxmod
ox/: CMakeLists.txt  main  main.c  makefile
ox-kernel/: CMakeLists.txt  display.c  display.h  event.c  event.h  event_types.h  main.c  main.h  module.c  ox.c  ox.h
runtime/node.js/: hello.node  hello_addon.cpp  runtime  runtime.cpp  test.js
